src/test/ui/parser/attr-stmt-expr-attr-bad-3.rs
#[cfg(FALSE)] fn e() { let _ = x.#[attr]foo(); }
//~^ ERROR unexpected token: `#`
